--- a/assets/style/components/admin/app-admin.scss
+++ b/assets/style/components/admin/app-admin.scss
@@ -31,6 +31,7 @@
             padding: 10px 20px;
             transition: color .2s linear;
             color: #94A6C7;
+            text-decoration: none;
 
             span {
                 margin-left: 10px;
@@ -76,13 +77,35 @@
         background: #E6ECF3;
         width: 100%;
         height: 100vh;
+        max-height: 100%;
         padding: 20px;
+        overflow: auto;
     }
 
     .admin-view__inner {
 
+        .admin-add {
+            margin-top: 20px;
+        }
+
+        .cell {
+            display: flex;
+            align-items: center;
+            column-gap: 10px;
+        }
+
+        .admin-title__wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
         .admin-title {
             font-size: 30px;
+            margin-bottom: 20px;
+        }
+
+        .admin-input {
             margin-bottom: 20px;
         }
 
