--- a/assets/style/index.scss
+++ b/assets/style/index.scss
@@ -1,4 +1,6 @@
 @import "components/main";
+@import "components/buttons";
+@import "components/input";
 @import "components/modal";
 @import "components/app-main";
 @import "components/app-header";
