--- a/assets/style/index.scss
+++ b/assets/style/index.scss
@@ -9,5 +9,6 @@
 @import "components/app-auth";
 @import "components/admin/app-admin";
 
+// Проверка
 // Sections
 @import "components/sections/news-section";
