--- a/assets/styles/components/main.scss
+++ b/assets/styles/components/main.scss
@@ -20,3 +20,15 @@ ul, ol, li {
 .site {
     margin-top: 124px;
 }
+
+.title-section {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 58px;
+    color: #252525;
+    margin-bottom: 48px;
+}
+
+.v-input__details {
+    display: none !important;
+}
