--- a/assets/styles/components/main.scss
+++ b/assets/styles/components/main.scss
@@ -32,3 +32,8 @@ ul, ol, li {
 .v-input__details {
     display: none !important;
 }
+
+.page-title {
+    font-size: 46px;
+    margin-bottom: 40px;
+}
