--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,3 +1,4 @@
+// Components
 @import "components/main";
 @import "components/buttons";
 @import "components/input";
@@ -11,3 +12,6 @@
 
 // Sections
 @import "components/sections/news-section";
+
+// Pages
+@import "components/page/news-page";
