--- a/assets/styles/components/app-auth.scss
+++ b/assets/styles/components/app-auth.scss
@@ -11,17 +11,33 @@
         transform: translate(-50%, -50%);
         background: #fff;
         border-radius: 10px;
-        padding: 20px;
+        padding: 30px;
         min-width: 400px;
-        min-height: 600px;
+        min-height: fit-content;
+        box-shadow: 0 3px 20px 0 rgba(0, 0, 0, .1);
 
         .auth-title {
             text-align: center;
+            font-size: 26px;
         }
 
         .auth-button {
             display: block;
-            margin: 0 auto;
+            margin: 20px auto 0;
+            width: 100%;
+            height: 60px;
+            background: #4272d7;
+            color: #fff;
+            font-weight: 600;
+            border: 2px solid #4272d7;
+            transition: background .2s linear, color .2s linear;
+            border-radius: 3px;
+
+            &:hover {
+                color: #4272d7;
+                background: transparent;
+                transition: background .2s linear, color .2s linear;
+            }
         }
     }
 }
