--- a/assets/styles/components/app-header.scss
+++ b/assets/styles/components/app-header.scss
@@ -7,6 +7,7 @@
     width: 100%;
     height: auto;
     padding: 20px 10px;
+    z-index: 100;
 
     .header-section__inner {
         display: flex;
