--- a/assets/styles/components/input.scss
+++ b/assets/styles/components/input.scss
@@ -4,3 +4,79 @@
     padding: 6px 12px;
     width: 100%;
 }
+
+.custom-input {
+    position: relative;
+    font-size: 16px;
+    margin-top: 20px;
+    display: inline-block;
+    --field-padding: 12px;
+    width: 100%;
+
+    .input-eye {
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 20px;
+        height: 20px;
+        opacity: .6;
+        transition: opacity .2s linear;
+
+        &:hover {
+            cursor: pointer;
+            opacity: 1;
+            transition: opacity .2s linear;
+        }
+    }
+
+    input {
+        appearance: none;
+        background: #f2f2f2;
+        padding: var(--field-padding);
+        border-radius: 3px;
+        width: 100%;
+        outline: none;
+        font-size: 16px;
+        background: none;
+        border: 2px solid #ddd;
+        transition: border-color 0.2s ease;
+    }
+
+    .placeholder {
+        position: absolute;
+        left: var(--field-padding);
+        width: calc(100% - (var(--field-padding) * 2));
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        top: 50%;
+        line-height: 100%;
+        transform: translateY(-50%);
+        color: #aaa;
+        transition: top 0.2s ease, color 0.2s ease, font-size 0.2s ease;
+        user-select: none;
+        cursor: text;
+    }
+
+    input + .placeholder {
+        left: 8px;
+        padding: 0 5px;
+    }
+
+    input.dirty,
+    input:not(:placeholder-shown),
+    input:focus {
+        border-color: #222;
+    }
+
+    input.dirty + .placeholder,
+    input:not(:placeholder-shown) + .placeholder,
+    input:focus + .placeholder {
+        top: 0;
+        font-size: 12px;
+        color: #222;
+        background: #fff;
+        width: auto
+    }
+}
