--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,8 +1,8 @@
 // Components
 @import "components/main";
-@import "components/buttons";
-@import "components/input";
-@import "components/checbox";
+@import "components/ui/buttons";
+@import "components/ui/input";
+@import "components/ui/checbox";
 @import "components/modal";
 @import "components/app-main";
 @import "components/app-header";
