Added new functional
Added new functional, done review code and etc

--- a/assets/styles/components/main.scss
+++ b/assets/styles/components/main.scss
@@ -13,8 +13,9 @@ ul, ol, li {
 }
 
 .wrapper {
-    max-width: 1620px;
+    max-width: 1680px;
     margin: 0 auto;
+    padding: 0 30px;
 }
 
 .site {
