--- a/assets/styles/components/ui/buttons.scss
+++ b/assets/styles/components/ui/buttons.scss
@@ -1,4 +1,6 @@
 .button {
+    position: relative;
+    cursor: default;
     padding: 6px 12px;
     border-radius: 4px;
     border: 1px solid #003882;
@@ -13,8 +15,9 @@
         transition: color .2s linear;
     }
 
-    &:hover {
+    &:hover:not(.disabled):not(.loading) {
         background: #003882;
+        cursor: pointer;
         transition: background .2s linear;
 
         span {
@@ -39,7 +42,7 @@
             color: #ffff;
         }
 
-        &:hover {
+        &:hover:not(.disabled):not(.loading) {
             background: transparent;
 
             span {
@@ -56,7 +59,7 @@
             color: #ffff;
         }
 
-        &:hover {
+        &:hover:not(.disabled):not(.loading) {
             background: transparent;
 
             span {
@@ -73,7 +76,7 @@
             color: #ffff;
         }
 
-        &:hover {
+        &:hover:not(.disabled):not(.loading) {
             background: transparent;
 
             span {
