--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -5,11 +5,11 @@
 @import "components/app-header";
 @import "components/app-footer";
 @import "components/app-auth";
-@import "components/admin/app-admin";
 @import "components/calendar";
 
 // Sections
 @import "components/sections/news-section";
+@import "components/sections/events-section";
 
 // Pages
 @import "components/page/news-page";
@@ -19,3 +19,7 @@
 @import "components/ui/input";
 @import "components/ui/checbox";
 @import "components/ui/loader";
+
+//Admin
+@import "components/admin/app-admin";
+@import "components/admin/admin-friends";
