--- a/assets/styles/components/main.scss
+++ b/assets/styles/components/main.scss
@@ -12,7 +12,13 @@ ul, ol, li {
     list-style-type: none;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .wrapper {
+    width: 100%;
     max-width: 1680px;
     margin: 0 auto;
     padding: 0 30px;
