Edits and new page

--- a/assets/styles/components/admin/app-admin.scss
+++ b/assets/styles/components/admin/app-admin.scss
@@ -183,6 +183,7 @@
                         border-radius: 15px;
                         border: 1px solid #1A2226;
                         padding: 6px 12px;
+                        max-width: 600px;
                     }
                 }
             }
