--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -13,6 +13,7 @@
 
 // Pages
 @import "components/page/news-page";
+@import "components/page/friends-page";
 
 // UI
 @import "components/ui/buttons";
