--- a/assets/styles/components/app-footer.scss
+++ b/assets/styles/components/app-footer.scss
@@ -1,6 +1,7 @@
 .footer-section {
     background: #131313;
-    padding: 40px 0px;
+    padding: 40px 0;
+    margin-top: 40px;
 
     &__inner {
         display: flex;
@@ -18,7 +19,7 @@
                 .logo__image {
                     font-size: 32px;
                 }
-                
+
                 .logo__text {
                     max-width: 200px;
                     margin-left: 8px;
@@ -39,7 +40,7 @@
                 margin-bottom: 15px;
                 max-width: 360px;
                 font-size: 15px;
-                
+
                 &:last-child {
                     font-size: 24px;
                     margin-bottom: 0;
