--- a/assets/styles/components/calendar.scss
+++ b/assets/styles/components/calendar.scss
@@ -3,8 +3,6 @@
     .fc-theme-standard td,
     .fc-theme-standard th {
         border: none;
-
-        &:hover {}
     }
 
     .fc-scrollgrid-sync-inner {
@@ -17,7 +15,7 @@
         font-size: 24px;
         font-weight: 700;
         color: #131313;
-        transition: color .2 linear;
+        transition: color .2s linear;
         width: 100%;
         height: 100%;
         display: grid;
@@ -115,5 +113,13 @@
             }
         }
 
+    }
+
+    .fs-selected-day {
+        background-color: rgba(43, 2, 111, .1);
+
+        .fc-daygrid-day-number {
+            color: #131313 !important;
+        }
     }
 }
