--- a/assets/styles/components/sections/news-section.scss
+++ b/assets/styles/components/sections/news-section.scss
@@ -1,33 +1,90 @@
 .news-section {
-    display: flex;
-    align-content: flex-start;
-    column-gap: 20px;
+    display: grid;
+    grid-column-gap: 18px;
+    row-gap: 36px;
+    grid-template-columns: repeat(4, calc((100% - 54px) / 4));
+    grid-template-rows: 360px auto;
+
+    margin-bottom: 800px;
 
     .news {
-        width: calc((100% - 60px) / 4);
+
+        &:first-child {
+            display: flex;
+            align-items: center;
+            column-gap: 20px;
+            grid-column: 1 / -1;
+
+            .image {
+                max-width: 654px;
+                max-height: 360px;
+                width: auto;
+
+                img {
+                    position: unset;
+                    top: unset;
+                    left: unset;
+                    transform: unset;
+                    height: 100%;
+                }
+            }
+
+            .news-content {
+                margin-top: 0;
+                max-width: 500px;
+
+                .category {  
+
+                }
+    
+                .title {
+                    margin-top: 24px;
+                    font-size: 28px;
+                    font-weight: 600;
+                    line-height: 38px;
+                }
+    
+                .description {
+                    font-size: 20px;
+                    margin-top: 16px;
+                    line-height: 28px;
+                    height: auto;
+                    max-height: 150px;
+                }
+            }
+        }
 
         .image {
+            position: relative;
             max-width: 100%;
+            height: 100%;
+            max-height: 200px;
+            width: 100%;
             border-radius: 12px;
             overflow: hidden;
 
             img {
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
                 display: block;
                 width: 100%;
+                height: 100%;
             }
         }
 
         .news-content {
             margin-top: 20px;
+            color: #131313;
 
-            .content-top {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
+            .category {
+                font-size: 15px;
+                font-weight: 400;
             }
-
+            
             .title {
-
+                margin-top: 16px;
             }
 
             .description {
@@ -37,8 +94,7 @@
                 overflow: hidden;
                 display: -webkit-box;
                 -webkit-line-clamp: 3;
-                -webkit-box-orient: vertical;
-                color: #41414B;
+                -webkit-box-orient: vertical;   
 
                 & > *:not(p) {
                     display: none;
@@ -47,6 +103,13 @@
                 p br {
                     display: none;
                 }
+            }
+
+            .data {
+                font-size: 15px;
+                font-weight: 400;
+                color: #656565;
+                margin-top: 16px;
             }
         }
     }
