--- a/assets/styles/components/calendar.scss
+++ b/assets/styles/components/calendar.scss
@@ -1,10 +1,12 @@
+:root {
+    --fc-now-indicator-color: #2B026F;
+    --fc-today-bg-color: rgba(43, 2, 111, .1); 
+}
 .events-sections__inner {
 
     .fc-theme-standard td,
     .fc-theme-standard th {
         border: none;
-
-        &:hover {}
     }
 
     .fc-scrollgrid-sync-inner {
@@ -99,9 +101,7 @@
         display: block;
     }
 
-    .fc-day.fc-day-past.fc-daygrid-day,
-    .fc-day.fc-day-today.fc-daygrid-day,
-    .fc-day.fc-day-future.fc-daygrid-day {
+    .fc-day.fc-daygrid-day {
         transition: background-color .2s linear;
 
         &:hover {
@@ -114,6 +114,41 @@
                 transition: color .2s linear;
             }
         }
-
     }
+    
+    .fc-col-header-cell-cushion {
+        color: #131313;
+        transition: color .2 linear;
+    }
+
+    .fc-col-header-cell.fc-day, .fc-col-header-cell.fc-day.fc-day-today {
+        transition: background-color .2s linear;
+
+        &:hover {
+            cursor: pointer;
+            background-color: rgba(43, 2, 111, .1);
+            transition: background-color .2s linear;
+
+            .fc-col-header-cell-cushion {
+                color: #131313 !important;
+                transition: color .2s linear;
+            }
+        }
+    }
+
+    .fc-col-header-cell.fc-day.fc-day-today {
+        background-color: #2B026F;
+        
+        .fc-scrollgrid-sync-inner {
+
+            .fc-col-header-cell-cushion {
+                color: #fff;
+
+            }
+        }
+    }
+
+
+
+
 }
