--- a/assets/styles/components/sections/events-section.scss
+++ b/assets/styles/components/sections/events-section.scss
@@ -5,14 +5,14 @@
         column-gap: 50px;
 
         .events-table {
-            width: 660px;
+            width: 50%;
             max-width: 50%;
-            
+
         }
     }
-    
+
     .fuck-yeah {
         margin-bottom: 40px;
     }
-      
+
 }
