--- a/assets/styles/components/app-header.scss
+++ b/assets/styles/components/app-header.scss
@@ -1,13 +1,12 @@
 .header-section {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: #003882;
+    background: #fff;
+    box-shadow: 0 2px 20px rgba(130, 130, 130, 0.15);
     color: #fff;
     width: 100%;
     height: auto;
     padding: 20px 10px;
     z-index: 100;
+    margin-bottom: 30px;
 
     .header-section__inner {
         display: flex;
@@ -16,7 +15,7 @@
     }
 
     .header-section__logo {
-        max-width: 80px;
+        max-width: 60px;
 
         & > * {
             max-width: 100%;
@@ -29,13 +28,53 @@
         column-gap: 20px;
     }
 
+    .header-section__phone {
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 140%;
+        color: #131313;
+        transition: color .2s linear;
+
+        &:hover {
+            color: #0048ff;
+            transition: color .2s linear;
+        }
+    }
+
     .header-section__item a {
+        position: relative;
         text-decoration: unset;
-        text-transform: uppercase;
-        color: #ffffff;
+        color: #131313;
+        font-weight: 400;
+        font-size: 17px;
+        line-height: 23px;
+        overflow: hidden;
+        display: inline-block;
+
+        &::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            bottom: 0;
+            left: 0;
+            transform: translateX(-101%);
+            background: #131313;
+            transition: transform .2s linear;
+        }
 
         &.router-link-active {
-            color: red
+            &::after {
+                transform: translateX(0);
+                transition: transform .2s linear;
+            }
+        }
+
+        &:hover {
+            &::after {
+                transform: translateX(0);
+                transition: transform .2s linear;
+            }
         }
     }
 }
