--- a/assets/styles/components/admin/app-admin.scss
+++ b/assets/styles/components/admin/app-admin.scss
@@ -20,6 +20,7 @@
 
 
             .admin-sidebar__button {
+                z-index: 9999;
                 transform: rotate(180deg);
                 right: 10px;
                 transition: margin-left .2s linear, box-shadow .2s linear, right .2s linear, transform .2s linear;
@@ -31,6 +32,7 @@
         }
 
         &__button {
+            z-index: 9999;
             position: absolute;
             padding: 10px;
             right: -48px;
@@ -42,7 +44,12 @@
             border-radius: 10px;
             box-shadow: none;
             transition: margin-left .2s linear, box-shadow .2s linear, right .2s linear, transform .2s linear;
-
+        
+            @media only screen and (max-width: 767px) {
+                position: fixed;
+                bottom: 10px;
+                left: 10px;
+            }
             &:hover {
                 cursor: pointer;
                 box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
@@ -126,6 +133,16 @@
             padding: 20px 60px 20px 60px;
             transition: padding .2s linear;
         }
+
+        @media only screen and (max-width: 768px) {
+            padding: 10px 10px 40px 10px;
+
+            &.morePad {
+                padding: 10px 10px 40px 10px;
+                transition: padding .2s linear;
+            }
+        }
+
     }
 
     .admin-view__inner {
@@ -177,6 +194,12 @@
                     display: flex;
                     align-items: center;
                     column-gap: 15px;
+
+                    @media only screen and (max-width: 480px) {
+                        flex-direction: column;
+                        align-items: start;
+                    }
+            
 
                     .edit-input {
                         margin-right: 20px;
