--- a/assets/styles/components/main.scss
+++ b/assets/styles/components/main.scss
@@ -49,7 +49,9 @@ html {
     background-color: #555;
 }
 
-ul, ol, li {
+ul,
+ol,
+li {
     list-style-type: none;
 }
 
@@ -64,7 +66,7 @@ a {
     margin: 0 auto;
     padding: 0 30px;
 
-    @media only screen and (max-width: 1710px ) {
+    @media only screen and (max-width: 1710px) {
         max-width: 1324px;
     }
 
@@ -94,4 +96,3 @@ a {
     font-size: 46px;
     margin-bottom: 30px;
 }
-
